# EConflux

./: CHANGELOG  LICENSE  LICENSE.txt  README.md  environment.yml  install_econflux.sh  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py  testcalib.py
.github/workflows/: publish.yml  python-publish.yml
SD wERI Workflows and Data RH/Inversion Notebooks/: SDwERI_2D_Informed_rm1.ipynb  SDwERI_2D_Raw.ipynb
SD wERI Workflows and Data RH/Inversion Notebooks/.ipynb_checkpoints/: SDwERI_2D_Informed_rm1-checkpoint.ipynb  SDwERI_2D_Raw-checkpoint.ipynb  testcalib-checkpoint.py
SD wERI Workflows and Data RH/Inversion Notebooks/EMI Inversion Data/: SDEMI4edit_Paraview.csv
SD wERI Workflows and Data RH/Inversion Notebooks/Electrode mapping from Boat GPS/: wERIUTM11N.csv
SD wERI Workflows and Data RH/Inversion Notebooks/wERI Inversion - Informed (reg_mode=1)/: rms_ap_rm1.csv
SD wERI Workflows and Data RH/Inversion Notebooks/wERI Inversion - Raw (reg_mode=0)/: ERT_not_informed.csv  rms_nap_rm0.csv
SD wERI Workflows and Data RH/resipy-3.6.4/doc/: api.rst  make.bat
SD wERI Workflows and Data RH/resipy-3.6.4/src/: MANIFEST.in  build.bat
code/: em2er.py  er2em.py  testcalib.py  vse.py
em2er/: em2er.py  readme.md
em2er/EMI Inversion Files/: SDEMI4edit_Paraview.csv  readme.md
em2er/Electrode mapping from Boat GPS/: 1db_prosys.csv  readme.md  wERIUTM11N.csv  wERT_combined_all.csv  wERT_elec_combined.csv
em2er/Electrode mapping from Boat GPS/EMI Files/: emi2erMesh_all.csv  readme.md
em2er/Electrode mapping from Boat GPS/ERI Electrode Files/: ElecwERT_elec_segment_001.csv  ElecwERT_elec_segment_002.csv  ElecwERT_elec_segment_003.csv  ElecwERT_elec_segment_004.csv  ElecwERT_elec_segment_005.csv  ElecwERT_elec_segment_006.csv  ElecwERT_elec_segment_007.csv  ElecwERT_elec_segment_008.csv  ElecwERT_elec_segment_009.csv  ElecwERT_elec_segment_010.csv  ElecwERT_elec_segment_011.csv  ElecwERT_elec_segment_012.csv  ElecwERT_elec_segment_013.csv  ElecwERT_elec_segment_014.csv  ElecwERT_elec_segment_015.csv  ElecwERT_elec_segment_016.csv  ElecwERT_elec_segment_017.csv  ElecwERT_elec_segment_018.csv  (+46 more)
em2er/Inversion Workflow Notebooks/: SDwERI_2D_Informed_rm1.ipynb  SDwERI_2D_Raw.ipynb  readme.md
em2er/wERI Inversion - Informed (reg_mode = 1)/: ERT_informed_rm1.csv  rms_ap_rm1.csv
em2er/wERI Inversion - Raw/: readme.md
em2er/wERI Inversion - Raw (reg_mode = 0)/: ERT_not_informed.csv  readme.md  rms_nap_rm0.csv
examples/dl_resistive_ag_er2em/: DL_ResinvConductivity.csv  Del_Res_Ag_ERT_Plots_Inv.csv  UDel_UTM_ECa.csv  d1_calF2_inv_Informed.csv  d1_calF2_inv_Informed_WIDE.csv  d1_calF2_inv_Raw.csv  d1_calF2_inv_Raw_WIDE.csv  df_ec.csv  df_eca.csv  er2em_delaware_resistive_ag_site.ipynb
examples/va_ag_em2er/: va_ag_041425_filter.csv  va_ag_MH_paraview_nocal_inph.csv  va_ag_em2er_workflow.ipynb
examples/va_ag_er2em/: va_ag_MH_invready_inph_noconvert_rECa.csv  va_ag_elec_resipy.csv  va_ag_er2em_workflow.ipynb
src/econflux/: __init__.py  er2em.py
(+260 files in other folders)
