[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'econflux'
version = "0.1.1"
description = "EConflux: Workflows for Multi-Method Geophysical Investigations"
readme = 'README.md'
license = "MIT"
license-files = ["LICENSE*"]
requires-python = '>=3.11'
authors = [
  {name = 'Chris Terra', email = 'cterra413@gmail.com'},
  {name = 'Joshua Thompson', email = 'josht32@mit.edu'},
  {name = 'Henry Moore', email = 'hemoore@uni-bremen.de'},
  {name = 'Raymond Hess', email = 'raymond.hess@rutgers.edu'},
  {name = 'Donald Pesonen', email = 'dp1444@scarletmail.rutgers.edu'},
  {name = 'Himadri Shekhar', email = 'hs1329@scarletmail.rutgers.edu'}
]
keywords = [
    'geophysics', 'statistical analysis', 'spatial analysis'
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "hydrostats",
    "hydroeval",
    "pysymlog"; python_version>='3.11'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/c-terra/EConflux"
Repository = "https://github.com/c-terra/EConflux"
Issues = "https://github.com/c-terra/EConflux/issues"

[project.optional-dependencies]
examples = ['geopandas', 'resipy', 'emagpy']

[tool.hatch.build.targets.wheel]
packages = ["src/econflux"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "examples/",
    "README.md",
    "LICENSE",
]
